---
source: src/syntax/latex/parser.rs
assertion_line: 1591
expression: "setup(r#\"\\input{foo[bar].tex}\"#)"
---
ROOT@0..20
  PREAMBLE@0..20
    LATEX_INCLUDE@0..20
      LATEX_INCLUDE_NAME@0..6 "\\input"
      CURLY_GROUP_WORD_LIST@6..20
        L_CURLY@6..7 "{"
        KEY@7..19
          WORD@7..10 "foo"
          L_BRACK@10..11 "["
          WORD@11..14 "bar"
          R_BRACK@14..15 "]"
          WORD@15..19 ".tex"
        R_CURLY@19..20 "}"

